# Generated by Django 5.2.7 on 2025-12-10 15:24

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('inventory', '0020_add_mpesa_payment_models'),
    ]

    operations = [
        # First, remove foreign key constraints from PaymentNotification
        migrations.RemoveField(
            model_name='paymentnotification',
            name='payment',
        ),
        migrations.RemoveField(
            model_name='paymentnotification',
            name='refund',
        ),
        # Then delete the old models
        migrations.DeleteModel(
            name='MpesaPayment',
        ),
        migrations.DeleteModel(
            name='MpesaRefund',
        ),
        # Create new Pesapal models
        migrations.CreateModel(
            name='PesapalPayment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('pesapal_order_tracking_id', models.CharField(db_index=True, help_text='Pesapal order tracking ID', max_length=100, unique=True)),
                ('pesapal_payment_id', models.CharField(blank=True, db_index=True, help_text='Pesapal payment ID (assigned after payment)', max_length=100, null=True, unique=True)),
                ('pesapal_reference', models.CharField(blank=True, db_index=True, help_text='Pesapal payment reference', max_length=100, null=True, unique=True)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=10)),
                ('currency', models.CharField(default='KES', max_length=3)),
                ('payment_method', models.CharField(blank=True, choices=[('MPESA', 'M-Pesa'), ('VISA', 'Visa'), ('MASTERCARD', 'Mastercard'), ('AMEX', 'American Express'), ('MOBILE_MONEY', 'Mobile Money'), ('BANK', 'Bank Transfer'), ('UNKNOWN', 'Unknown')], max_length=20, null=True)),
                ('customer_email', models.EmailField(blank=True, max_length=254, null=True)),
                ('customer_phone', models.CharField(blank=True, max_length=15, null=True)),
                ('customer_name', models.CharField(blank=True, max_length=255, null=True)),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('IN_PROGRESS', 'In Progress'), ('COMPLETED', 'Payment Completed'), ('FAILED', 'Payment Failed'), ('CANCELLED', 'Cancelled'), ('EXPIRED', 'Payment Expired')], default='PENDING', max_length=20)),
                ('initiated_at', models.DateTimeField(auto_now_add=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('expired_at', models.DateTimeField(blank=True, null=True)),
                ('ipn_data', models.JSONField(blank=True, default=dict, help_text='IPN callback data')),
                ('api_request_data', models.JSONField(blank=True, default=dict)),
                ('api_response_data', models.JSONField(blank=True, default=dict)),
                ('is_verified', models.BooleanField(default=False)),
                ('verified_at', models.DateTimeField(blank=True, null=True)),
                ('ipn_received', models.BooleanField(default=False)),
                ('ipn_received_at', models.DateTimeField(blank=True, null=True)),
                ('redirect_url', models.URLField(blank=True, help_text='Pesapal payment page URL', null=True)),
                ('callback_url', models.URLField(blank=True, help_text='Callback URL after payment', null=True)),
                ('order', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pesapal_payments', to='inventory.order')),
            ],
            options={
                'ordering': ['-initiated_at'],
            },
        ),
        # Add foreign keys back to PaymentNotification pointing to new models
        migrations.AddField(
            model_name='paymentnotification',
            name='payment',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='inventory.pesapalpayment'),
        ),
        migrations.CreateModel(
            name='PesapalRefund',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('pesapal_refund_id', models.CharField(db_index=True, max_length=100, unique=True)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=10)),
                ('currency', models.CharField(default='KES', max_length=3)),
                ('status', models.CharField(choices=[('PENDING', 'Pending'), ('INITIATED', 'Refund Initiated'), ('COMPLETED', 'Refund Completed'), ('FAILED', 'Refund Failed'), ('CANCELLED', 'Cancelled')], default='PENDING', max_length=20)),
                ('refund_reason', models.TextField(blank=True)),
                ('initiated_at', models.DateTimeField(auto_now_add=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('ipn_data', models.JSONField(blank=True, default=dict)),
                ('api_response_data', models.JSONField(blank=True, default=dict)),
                ('initiated_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='initiated_pesapal_refunds', to=settings.AUTH_USER_MODEL)),
                ('order', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pesapal_refunds', to='inventory.order')),
                ('original_payment', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='refunds', to='inventory.pesapalpayment')),
            ],
            options={
                'ordering': ['-initiated_at'],
            },
        ),
        migrations.AddField(
            model_name='paymentnotification',
            name='refund',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='inventory.pesapalrefund'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['pesapal_order_tracking_id'], name='inventory_p_pesapal_cb0647_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['pesapal_payment_id'], name='inventory_p_pesapal_2e8a75_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['pesapal_reference'], name='inventory_p_pesapal_384acf_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['status'], name='inventory_p_status_fa663b_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['order', 'status'], name='inventory_p_order_i_6f4d17_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['customer_email'], name='inventory_p_custome_bf0e2f_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalpayment',
            index=models.Index(fields=['status', 'initiated_at'], name='inventory_p_status_5f966d_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalrefund',
            index=models.Index(fields=['pesapal_refund_id'], name='inventory_p_pesapal_2bf8be_idx'),
        ),
        migrations.AddIndex(
            model_name='pesapalrefund',
            index=models.Index(fields=['status'], name='inventory_p_status_448faa_idx'),
        ),
    ]
